--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+
+    <!-- Preloader -->
+    <div class="overlay-form flex-column" id="preloader">
+      <div class="spinner-border text-dark" role="status" style="font-size: 2rem;">
+        <span class="sr-only"></span>
+      </div>
+      <div class="loading-text mt-1 fs-5">Cargando...</div>
+    </div>
     
     <header>
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark" id="nav">
             <div class="container">
               <a class="navbar-brand">Mi portafolio</a>
-              <button class="navbar-toggler border border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <button id="navbarToggler" class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa-sharp fa-solid fa-bars"></i>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -284,14 +292,14 @@
                 </div>
               </form>
             </div>
-            <div class="row justify-content-center mt-5">
+            <div class="row justify-content-center mt-3">
               <div class="col-lg-8">
                 <div class="section-title text-center" data-aos="fade-up">
                   <h5 class="fw-bold mb-2">Tambien me puedes contactar por:</h5>
                 </div>
               </div>
             </div>
-            <div class="row">
+            <div class="row mt-2">
               <div class="col-md-12" data-aos="fade-up">
                 <div class="socials-content d-flex justify-content-center align-items-center gap-3 text-dark">
                   <div class="social-item">
@@ -324,7 +332,7 @@
 
 
 
-
+      <script src="assets/js/preloader.js"></script>
       <!-- Bootstrap JS -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       <!--CDN Libreria Typed.js -->
