--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <div class="foto-container" data-aos="fade-up">
               <img src="assets/images/astronauta.jpg" alt="" class="img-fluid">
               <div class="overlay-socials">
-                <a href="#" class="nav-link"><i class="fa-brands fa-github fs-1"></i></a>
-                <a href="#" class="nav-link"><i class="fa-brands fa-linkedin fs-1"></i></a>
-                <a href="#" class="nav-link"><i class="fa-brands fa-whatsapp fs-1"></i></a>
+                <a href="https://github.com/CristianBarrios983" class="nav-link" target="_blank"><i class="fa-brands fa-github fs-1"></i></a>
+                <a href="https://www.linkedin.com/in/cristianbarrios983/" class="nav-link" target="_blank"><i class="fa-brands fa-linkedin fs-1"></i></a>
+                <a href="#" class="nav-link" target="_blank"><i class="fa-brands fa-whatsapp fs-1"></i></a>
               </div>
             </div>
           </div>
@@ -303,13 +303,13 @@
               <div class="col-md-12" data-aos="fade-up">
                 <div class="socials-content d-flex justify-content-center align-items-center gap-3 text-dark">
                   <div class="social-item">
-                    <a href="#" class="nav-link"><i class="fa-brands fa-github fs-1 me-1"></i></a>
+                    <a href="https://github.com/CristianBarrios983" class="nav-link" target="_blank"><i class="fa-brands fa-github fs-1 me-1"></i></a>
                   </div>
                   <div class="social-item">
-                    <a href="#" class="nav-link"><i class="fa-brands fa-linkedin fs-1 me-1"></i></a>
+                    <a href="https://www.linkedin.com/in/cristianbarrios983/" class="nav-link" target="_blank"><i class="fa-brands fa-linkedin fs-1 me-1"></i></a>
                   </div>
                   <div class="social-item">
-                    <a href="#" class="nav-link"><i class="fa-brands fa-whatsapp fs-1 me-1"></i></a>
+                    <a href="#" class="nav-link" target="_blank"><i class="fa-brands fa-whatsapp fs-1 me-1"></i></a>
                   </div>
                 </div>
               </div>
