cambios en el modal de proyectos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body>
+<body class="">
 
     <!-- Preloader -->
     <div class="overlay-form flex-column" id="preloader">
@@ -245,7 +245,7 @@
 
             <!-- Modal info -->
             <!-- Modal -->
-            <div class="modal" id="modal" tabindex="-1">
+            <div class="modal justify-content-center align-items-center" id="modal" tabindex="-1">
               <div class="modal-dialog">
                 <div class="modal-content rounded-0">
                   <div class="modal-header">
@@ -257,7 +257,7 @@
                     <div id="badges"></div>
                   </div>
                   <div class="modal-footer">
-                    <a id="url-code" type="button" class="btn btn-primary rounded-0 fs-5" target="_blank">Codigo</a>
+                    <a id="url-code" type="button" class="btn btn-success rounded-0 fs-5" target="_blank">Codigo</a>
                   </div>
                 </div>
               </div>
