--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <button id="scrollToTop" onclick="" class="border-0 rounded-circle bg-danger text-white p-3 position-fixed bottom-0 end-0 me-3 d-flex justify-content-center align-items-center d-none"><i class="fa-solid fa-arrow-up"></i></button>
     
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark transparent" id="nav">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark" id="nav">
             <div class="container">
               <a class="navbar-brand">Mi portafolio</a>
               <button id="navbarToggler" class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,10 +70,10 @@
           </nav>
     </header>
 
-    <!-- Sección con fondo de imagen -->
+    <!-- Sección home -->
     <section id="home" class="home d-flex justify-content-center align-items-center min-vh-100">
         <div class="container p-4">
-            <div class="row">
+            <div class="row d-none" id="hide">
                 <div class="col-md-12 text-center">
                     <div class="texts">
                       <h1 class="display-2 fw-bold text-white">¡Hola!</h1>
@@ -245,7 +245,7 @@
 
             <!-- Modal info -->
             <!-- Modal -->
-            <div class="modal justify-content-center align-items-center" id="modal" tabindex="-1">
+            <div class="modal fade justify-content-center align-items-center" id="modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
               <div class="modal-dialog">
                 <div class="modal-content rounded-0">
                   <div class="modal-header">
@@ -360,8 +360,6 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       <!--CDN Libreria Typed.js -->
       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-      <!-- Main.js -->
-      <script src="assets/js/main.js"></script>
       <!-- Dark Mode -->
       <script src="assets/js/dark-mode.js"></script>
       <!-- Nav.js -->
@@ -376,7 +374,7 @@
       <script>
         AOS.init({
           //para la duracion de la animacion
-          duration: 1000
+          duration: 1300
         });
       </script>
       <!-- Font-Awesome -->
