Separacion de css en diferentes archivos y cambios en los botones

--- a/index.html
+++ b/index.html
@@ -287,26 +287,26 @@
                 <div class="mb-3 d-flex gap-2">
                   <div class="" data-aos="fade-up">
                     <input type="text" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="nombre" name="nombre" placeholder="Nombre" required>
-                    <div class="invalid-feedback">
+                    <div class="invalid-feedback fw-bold">
                       El campo no pueden estar vacios
                     </div>
                   </div>
                   <div class="" data-aos="fade-up">
                     <input type="text" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="asunto" name="asunto" placeholder="Asunto" required>
-                    <div class="invalid-feedback">
+                    <div class="invalid-feedback fw-bold">
                       El campo no pueden estar vacios
                     </div>
                   </div>
                 </div>
                 <div class="mb-3" data-aos="fade-up">
                   <input type="email" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="email" name="email" placeholder="Correo electronico" required>
-                  <div class="invalid-feedback">
+                  <div class="invalid-feedback fw-bold">
                     Ingrese un correo por favor
                   </div>
                 </div>
                 <div class="mb-3" data-aos="fade-up">
                   <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" placeholder="Deje su mensaje aqui..." required></textarea>
-                  <div class="invalid-feedback">
+                  <div class="invalid-feedback fw-bold">
                     Debe escribir un mensaje
                   </div>
                 </div>
