--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
             <div class="row d-none" id="hide">
                 <div class="col-md-12 text-center">
                     <div class="texts">
-                      <h1 class="display-2 fw-bold text-white">¡Hola!</h1>
+                      <h1 class="display-1 fw-bold text-white">¡Hola!</h1>
                       <p class="fs-3 fw-bolder text-white">
                         <span class="typed"></span>
                       </p>
                     </div>
                     <div id="texts" class="texts">
                       <p class="fs-3 fw-bolder text-white">Me llamo <span class="text-warning">Cristian Barrios</span></p>
-                      <p class="fs-3 fw-bolder text-white">Soy un <span class="text-warning">desarrollador web</span></p>
+                      <p class="fs-3 fw-bolder text-white">Soy un <span class="text-warning text-capitalize">desarrollador web</span></p>
                     </div>
                     <div class="buttons d-flex justify-content-center flex-column flex-md-row gap-2">
                       <a href="#projects" class="btn btn-danger fs-5 rounded-0 p-3">Mis proyectos</a>
@@ -117,7 +117,7 @@
             </div>
           <div class="row">
               <div class="col-lg-12" data-aos="fade-up">
-                <a href="assets/files/curriculum.pdf" target="_blank" class="btn btn-danger fs-5 rounded-0 me-3">Descargar CV</a>
+                <a href="assets/files/curriculum.pdf" target="_blank" class="btn btn-danger fs-5 rounded-0">Descargar CV</a>
               </div>
           </div>
           </div>
