Pequeño cambio en el modal de proyectos

--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
                 <div class="modal-content rounded-0">
                   <div class="modal-header">
                     <h5 class="modal-title" id="projectTitle"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="cerrarModal()"></button>
+                    <button type="button" class="btn fs-5 modal-close" data-bs-dismiss="modal" aria-label="Close" onclick="cerrarModal()">
+                      <i class="fa-sharp fa-solid fa-x"></i>
+                    </button>
                   </div>
                   <div class="modal-body" id="modalBody">
                     <p id="projectDescription"></p>
