Correccion de errores ortograficos

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body class="">
 
     <!-- Preloader -->
-    <div class="overlay-form flex-column" id="preloader">
-      <div class="spinner-border text-dark" role="status" style="font-size: 2rem;">
+    <div class="overlay-pre flex-column text-white" id="preloader">
+      <div class="spinner-border" role="status" style="font-size: 2rem;">
         <span class="sr-only"></span>
       </div>
-      <div class="loading-text mt-1 fs-5">Cargando...</div>
+      <div class="loading-text mt-1 fs-5 fw-bold">Cargando...</div>
     </div>
 
     <!-- Boton de scroll hacia arriba -->
@@ -44,7 +44,7 @@
                     <a class="nav-link" aria-current="page" href="#home">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#about-me">Sobre mi</a>
+                    <a class="nav-link" href="#about-me">Sobre mí</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#skills">Habilidades</a>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="buttons d-flex justify-content-center flex-column flex-md-row gap-2">
                       <a href="#projects" class="btn btn-danger fs-5 rounded-0 p-3">Mis proyectos</a>
-                      <a href="#contact" class="btn btn-primary fs-5 rounded-0 p-3">Contactame</a>
+                      <a href="#contact" class="btn btn-primary fs-5 rounded-0 p-3">Contáctame</a>
                     </div>
                 </div>
             </div>
@@ -112,8 +112,10 @@
           <!-- Contenedor de la descripción -->
           <div class="col-md-6 d-flex justify-content-center align-items-center flex-column">
             <div class="descripcion-container text-center text-md-start" data-aos="fade-up">
-              <h2 class="fw-bold">Un poco sobre mi...</h2>
-              <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ducimus, velit et unde ad blanditiis est vel officiis distinctio obcaecati alias debitis omnis cum, quidem nam eius assumenda. Id, inventore!.</p>
+              <h2 class="fw-bold mb-3">Un poco sobre mí...</h2>
+              <p class="text-muted">Dedico mi tiempo a crear páginas web y otras cosas sencillas relacionadas con ello. Mi habilidad se podría decir que se encuentra en lo estético; disfruto asegurándome de que todo funcione como quiero y, al mismo tiempo, luzca bien.</p>
+              <p class="text-muted">Cuando no estoy tecleando, suelo ver vídeos sobre programación o temas que me interesan para despejar la mente.</p>
+              <p class="text-muted">Si estás buscando un compañero de trabajo entusiasta y comprometido con tus proyectos web, aquí me tienes. Estaré encantado de ayudar.</p>
             </div>
           <div class="row">
               <div class="col-lg-12" data-aos="fade-up">
@@ -139,44 +141,44 @@
         <div class="row">
           <div class="container-skills d-flex justify-content-center align-items-center">
             <div class="row gap-3 justify-content-center">
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column py-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <i class="fa-brands fa-html5 display-2"></i>
                 </div>
                 <div class="skill-name">
-                  <h3 class="fs-5 m-0 mt-1">HTML</h3>
+                  <h3 class="fs-5 m-0">HTML</h3>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-1 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <i class="fa-brands fa-css3-alt display-2"></i>
                 </div>
                 <div class="skill-name">
-                  <h3 class="fs-5 m-0 mt-1">CSS</h3>
+                  <h3 class="fs-5 m-0">CSS</h3>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-1 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <i class="fa-brands fa-js display-2"></i>
                 </div>
                 <div class="skill-name">
-                  <h3 class="fs-5 m-0 mt-1">Javascript</h3>
+                  <h3 class="fs-5 m-0">Javascript</h3>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-1 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <i class="fa-brands fa-bootstrap display-2"></i>
                 </div>
                 <div class="skill-name">
-                  <h3 class="fs-5 m-0 mt-1">Bootstrap</h3>
+                  <h3 class="fs-5 m-0">Bootstrap</h3>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-1 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <i class="fa-brands fa-php display-2"></i>
                 </div>
                 <div class="skill-name">
-                  <h3 class="fs-5 m-0 mt-1">PHP</h3>
+                  <h3 class="fs-5 m-0">PHP</h3>
                 </div>
               </div>
             </div>
@@ -191,38 +193,38 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <div class="section-title text-center" data-aos="fade-up">
-              <h2 class=" fw-bold mb-5">Que es lo que hago?</h2>
+              <h2 class=" fw-bold mb-5">¿Qué es lo que hago?</h2>
             </div>
           </div>
         </div>
         <div class="row text-center justify-content-center">
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item p-4 rounded-0 bg-secondary-subtle">
+            <div class="service-item p-4 rounded-0 bg-secondary-subtle d-flex flex-column h-100">
               <div class="icon my-3 fs-2">
                 <i class="fa-solid fa-code"></i>
               </div>
               <h3 class="fs-3 py-2">Desarrollo Web</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <p class="flex-grow-1">Construyo sitios modernos que se ven bien en cualquier dispositivo, para que tu experiencia en línea sea genial y funcional.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item p-4 rounded-0 bg-secondary-subtle">
+            <div class="service-item p-4 rounded-0 bg-secondary-subtle d-flex flex-column h-100">
               <div class="icon my-3 fs-2">
                 <i class="fa-solid fa-paintbrush"></i>
               </div>
               <h3 class="fs-3 py-2">Diseños creativos</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <p class="flex-grow-1">Me gusta diseñar cosas que no solo sean bonitas, sino también geniales. </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item p-4 rounded-0 bg-secondary-subtle">
+            <div class="service-item p-4 rounded-0 bg-secondary-subtle d-flex flex-column h-100">
               <div class="icon my-3 fs-2">
                 <i class="fa-solid fa-gear"></i>
               </div>
-              <h3 class="fs-3 py-2">Mantenimiento Web</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <h3 class="fs-3 py-2">Optimización</h3>
+              <p class="flex-grow-1">Trabajo en hacer que las páginas carguen rápido y usen menos recursos en internet.</p>
             </div>
           </div>
         </div>
@@ -244,12 +246,11 @@
             <!-- Cards de proyectos -->
 
             <!-- Modal info -->
-            <!-- Modal -->
             <div class="modal fade justify-content-center align-items-center" id="modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
               <div class="modal-dialog">
                 <div class="modal-content rounded-0">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="projectTitle"></h5>
+                    <h5 class="modal-title fw-bold" id="projectTitle"></h5>
                     <button type="button" class="btn fs-5 modal-close" data-bs-dismiss="modal" aria-label="Close" onclick="cerrarModal()">
                       <i class="fa-sharp fa-solid fa-x"></i>
                     </button>
@@ -259,7 +260,7 @@
                     <div id="badges"></div>
                   </div>
                   <div class="modal-footer">
-                    <a id="url-code" type="button" class="btn btn-success rounded-0 fs-5" target="_blank">Codigo</a>
+                    <a id="url-code" type="button" class="btn btn-success rounded-0 fs-5" target="_blank">Código</a>
                   </div>
                 </div>
               </div>
@@ -275,7 +276,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <div class="section-title text-center" data-aos="fade-up">
-              <h2 class="fw-bold mb-5">Contactame</h2>
+              <h2 class="fw-bold mb-5">Contáctame</h2>
             </div>
           </div>
         </div>
@@ -290,37 +291,37 @@
                   <div class="" data-aos="fade-up">
                     <input type="text" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="nombre" name="nombre" placeholder="Nombre" required>
                     <div class="invalid-feedback fw-bold">
-                      El campo no pueden estar vacios
+                      El campo no puede estar vacío
                     </div>
                   </div>
                   <div class="" data-aos="fade-up">
                     <input type="text" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="asunto" name="asunto" placeholder="Asunto" required>
                     <div class="invalid-feedback fw-bold">
-                      El campo no pueden estar vacios
+                      El campo no puede estar vacío
                     </div>
                   </div>
                 </div>
                 <div class="mb-3" data-aos="fade-up">
-                  <input type="email" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="email" name="email" placeholder="Correo electronico" required>
+                  <input type="email" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="email" name="email" placeholder="Correo electrónico" required>
                   <div class="invalid-feedback fw-bold">
-                    Ingrese un correo por favor
+                    Ingrese un correo, por favor
                   </div>
                 </div>
                 <div class="mb-3" data-aos="fade-up">
-                  <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" placeholder="Deje su mensaje aqui..." required></textarea>
+                  <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" placeholder="Deje su mensaje aquí..." required></textarea>
                   <div class="invalid-feedback fw-bold">
                     Debe escribir un mensaje
                   </div>
                 </div>
                 <div class="mb-3" data-aos="fade-up">
-                  <button type="submit" class="btn btn-primary fs-5 rounded-0 d-block w-100">Enviar mensaje <i class="fa-regular fa-paper-plane"></i></button>
+                  <button type="submit" class="btn btn-primary fs-5 fw-bold rounded-0 d-block w-100">Enviar mensaje <i class="fa-regular fa-paper-plane"></i></button>
                 </div>
               </form>
             </div>
             <div class="row justify-content-center mt-3">
               <div class="col-lg-8">
                 <div class="section-title text-center" data-aos="fade-up">
-                  <h5 class="fw-bold mb-2">Tambien me puedes contactar por:</h5>
+                  <h5 class="fw-bold mb-2">También me puedes contactar por:</h5>
                 </div>
               </div>
             </div>
